--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="text" id="password" placeholder="Enter your password" />
+        <input type="password" id="password" placeholder="Enter your password" />
         <small>Error message</small>
       </div>
 
